--- a/main.css
+++ b/main.css
@@ -3,13 +3,31 @@
 
 body {
   background-color: black;
-  font-family: fantasy;
+  font-family: Arial, Helvetica, sans-serif;
 }
 button {
-  font-size: 6rem;
   background-color: darkslategrey;
   color: white;
 }
+
+@media screen and (min-width: 640px) {
+  button, div {
+    font-size: 4rem;
+  }
+}
+
+@media screen and (min-width: 321px) {
+  button, div {
+    font-size: 2rem;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  button, div {
+    font-size: 1.5rem;
+  }
+}
+
 .container {
   width: device-width;
   height: 260px;
@@ -43,7 +61,6 @@ button {
   color: white;
   text-align: center;
   font-weight: bold;
-  font-size: 10rem;
   position: absolute;
   -webkit-backface-visibility: hidden;
   -moz-backface-visibility: hidden;
