--- a/main.css
+++ b/main.css
@@ -2,12 +2,17 @@
 /* https://jsfiddle.net/james2doyle/qsQun/ */
 
 body {
-  background-color: black;
+  background-color: slategrey;
   font-family: Arial, Helvetica, sans-serif;
 }
 button {
   background-color: darkslategrey;
   color: white;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 @media screen and (min-width: 640px) {
